[metadata]
name = spdx-tools
author = Ahmed H. Ismail
author_email = ahm3d.hisham@gmail.com
maintainer = Philippe Ombredanne, SPDX group at the Linux Foundation and others
maintainer_email = pombredanne@gmail.com
license = Apache-2.0
license_file = LICENSE
description = SPDX parser and tools.
url = https://github.com/spdx/tools-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7

[options]
packages = find:
zip_safe = False
install_requires =
    ply
    rdflib
    six
    enum34
    Click
    pyyaml
    xmltodict
    pyparsing<=1.5.7;python_version<="2.8"
include_package_data = True
python_requires = >=2.7

[options.packages.find]
exclude = 
    examples
    tests
    examples.*
    tests.*

[options.entry_points]
console_scripts =
    pyspdxtools_convertor = spdx.cli_tools.convertor:main
    pyspdxtools_parser = spdx.cli_tools.parser:main

[bdist_wheel]
universal = 1

[aliases]
release = clean --all sdist --formats=gztar bdist_wheel
